--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,37 @@
+:root {
+    --red-insa: #e42418;
+  }
+
 body {
     margin: 0;
+    width: 100vw;
+    height: 100vh;
+    /* Empeche le scroll */
+    overflow: hidden;
 }
 
 #insaContainer {
     display: block;
-    padding: 5% 0;
-    background-color: brown;
+    padding: 5vh 0;
+    background-color: var(--red-insa);
 }
 
 #theFlex {
     display: flex;
     align-content: flex-start;
-    width: 100%;
-    height: 90%;
+    width: 100vw;
+    height: 90vh;
     align-items: stretch;
 }
 
 #bureauContainer {
-    width: 25%;
-    height: 77.5%;
+    width: 25vw;
+    height: 90vh;
 }
 
 #sceneContainer {
-    width: 10%;
-    height: 80%;
+    width: 75vw;
+    height: 90vh;
 }
 
 canvas {
