--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,15 @@ body {
 #sceneContainer {
     width: 75vw;
     height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-canvas {
-    display: block;
+#sceneContainer canvas {
+    display: block; /* Ensure it's a block element */
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #hud {
