--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
     --red-insa: #e42418;
-  }
+}
 
 body {
     margin: 0;
@@ -11,9 +11,15 @@ body {
 }
 
 #insaContainer {
-    display: block;
-    padding: 5vh 0;
+    display: flex;
+    height: 10vh;
     background-color: var(--red-insa);
+    justify-content: center;
+    align-items: center;
+}
+
+#insaLogo {
+    max-height: 9vh;
 }
 
 #theFlex {
