--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,29 @@
+@media screen and (orientation: portrait) {
+  #theFlex {
+    flex-direction: column;
+  }
+}
+
+
 :root {
     --red-insa: #e42418;
 }
 
 body {
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     /* Empeche le scroll */
     overflow: hidden;
+    box-sizing: border-box;
 }
 
-/* #insaContainer {
-    display: flex;
-    height: 10vh;
-    background-color: var(--red-insa);
-    justify-content: flex-end;
-    align-items: center;
-} */
-
-/* #insaLogo {
-    max-height: 7vh;
-    margin-right: 1vw;
-    padding: 0.5vh;
-    background-color: white;
-} */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 
 #theFlex {
     display: flex;
@@ -31,14 +31,16 @@ body {
     width: 100vw;
     height: 100vh;
     align-items: stretch;
+    flex-direction: row;
 }
 
 #bureauContainer {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    width: 35vw;
-    height: 100vh;
+    width: 35%;
+    height: 100%;
+    position: relative;
 }
 
 #bureau-header {
@@ -56,13 +58,14 @@ body {
 }
 
 #sceneContainer {
-    width: 65vw;
-    height: 100vh - 1rem;
+    width: 65%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 0.5rem solid;
     border-color: var(--red-insa);
+    position: relative;
 }
 
 #sceneContainer canvas {
