--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-@media screen and (orientation: portrait) {
-  #theFlex {
-    flex-direction: column;
-  }
-}
-
-
 :root {
     --red-insa: #e42418;
 }
@@ -73,6 +66,30 @@ body {
     max-width: 100%;
     max-height: 100%;
 }
+
+/* #team {
+    position: absolute;
+}
+
+#team-logo {
+    max-height: 10vh;
+    margin-left: 2vw;
+} */
+
+@media screen and (orientation: portrait) {
+  #theFlex {
+    flex-direction: column;
+  }
+  #bureauContainer {
+    height: 50%;
+    width: 100%;
+  }
+  #sceneContainer {
+    height: 50%;
+    width: 100%;
+  }
+}
+
 
 /* #hud {
     position: absolute;
