--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,10 @@ body {
 #bureauContainer {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
     width: 35%;
     height: 100%;
     position: relative;
+    padding-bottom: 8vh;
 }
 
 #bureau-header {
@@ -48,6 +48,14 @@ body {
     margin-right: 1vw;
     padding: 0.5vh;
     background-color: white;
+}
+
+#menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 84vh;
 }
 
 #sceneContainer {
