--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ body {
     width: 35%;
     height: 100%;
     position: relative;
-    padding-bottom: 8vh;
 }
 
 #bureau-header {
@@ -54,8 +53,26 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 84vh;
+    margin: 5% 0 5% 0;
+}
+
+.cat-menu {
+    display: flex;
+    flex-wrap: nowrap;
+    border: #000;
+    border-radius: 3vh;
+    border-style: solid;
+    align-items: center;
+    justify-content: center;
+    height: 15%;
+    width: 85%;
+    font-size: 1.6rem;
+    cursor: pointer;
+}
+.cat-menu:hover {
+    background-color: #999;
 }
 
 #sceneContainer {
