--- a/css/styles.css
+++ b/css/styles.css
@@ -58,21 +58,24 @@ body {
     margin: 5% 0 5% 0;
 }
 
+
+
 .cat-menu {
     display: flex;
     flex-wrap: nowrap;
-    border: #000;
+    /* border: #000;
     border-radius: 3vh;
-    border-style: solid;
+    border-style: solid; */
     align-items: center;
     justify-content: center;
     height: 15%;
     width: 85%;
     font-size: 1.6rem;
     cursor: pointer;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .cat-menu:hover {
-    background-color: #999;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 #sceneContainer {
@@ -85,6 +88,7 @@ body {
     border-color: var(--red-insa);
     position: relative;
 }
+
 
 #sceneContainer canvas {
     display: block; /* Ensure it's a block element */
