--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,41 @@ body {
     box-sizing: border-box;
 }
 
+
+.pf-d-bureau-title {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lato-regular {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lato-bold {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+h1 {
+    margin: 0;
+}
+
+h4 {
+    margin: 0;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
 
-#theFlex {
+#home-flex {
     display: flex;
     align-content: flex-start;
     width: 100vw;
@@ -27,7 +55,7 @@ body {
     flex-direction: row;
 }
 
-#bureauContainer {
+#bureau-container {
     display: flex;
     flex-direction: column;
     width: 35%;
@@ -42,7 +70,7 @@ body {
     justify-content: center;
 }
 
-#bureauLogoBig {
+#bureau-header img {
     max-height: 7vh;
     margin-right: 1vw;
     padding: 0.5vh;
@@ -60,7 +88,7 @@ body {
 
 
 
-.cat-menu {
+.menu-item {
     display: flex;
     flex-wrap: nowrap;
     /* border: #000;
@@ -74,11 +102,11 @@ body {
     cursor: pointer;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
-.cat-menu:hover {
+.menu-item:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-#sceneContainer {
+#scene-container {
     width: 65%;
     height: 100%;
     display: flex;
@@ -89,11 +117,18 @@ body {
     position: relative;
 }
 
-
-#sceneContainer canvas {
+#scene-container canvas {
     display: block; /* Ensure it's a block element */
     max-width: 100%;
     max-height: 100%;
+}
+
+
+#fs-img {
+    position: absolute;
+    bottom: 2%;
+    right: 2%;
+    display: none;
 }
 
 #team {
@@ -114,23 +149,38 @@ body {
 
 
 
-@media screen and (orientation: portrait) {
-  #theFlex {
-    flex-direction: column;
-  }
-  #bureauContainer {
-    height: 50%;
+
+#info-top {
     width: 100%;
-  }
-  #sceneContainer {
-    height: 50%;
-    width: 100%;
-  }
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
+
 
 .no-show {
     display: none !important;
 }
+
+@media screen and (orientation: portrait) {
+  #home-flex {
+    flex-direction: column;
+  }
+  #bureau-container {
+    height: 50%;
+    width: 100%;
+  }
+  #scene-container {
+    height: 50%;
+    width: 100%;
+  }
+  #fs-img {
+    display: block;
+  }
+}
+
+
 
 
 /* #hud {
