--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,7 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    /* Empeche le scroll */
-    overflow: hidden;
+    overflow: scroll;
     box-sizing: border-box;
 }
 
@@ -135,15 +134,19 @@ h4 {
     position: absolute;
     top: 2%;
     left: 2%;
+    height: 20%;
+    width: 20%;
+    border-style: solid;
+    border-color: #fff;
 }
 
 .team-logo-Dsize {
-    height: 15vh;
+    height: 100%;
     width: auto;
 }
 
 .vikinsize {
-    height: 17vh;
+    height: 100%;
     width: auto;
 }
 
@@ -151,13 +154,29 @@ h4 {
 
 
 #info-top {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-content: center;
+    padding: 5%;
 }
 
+.it-logo {
+    height: 35%;
+    width: auto;
+}
+
+#cross-img {
+    height: 10%;
+    width: auto;
+}
+
+#down-arrow {
+    height: 10%;
+    width: auto;
+}
 
 .no-show {
     display: none !important;
@@ -177,6 +196,9 @@ h4 {
   }
   #fs-img {
     display: block;
+  }
+  #info-top {
+    flex-direction: column;
   }
 }
 
