--- a/css/styles.css
+++ b/css/styles.css
@@ -134,15 +134,22 @@ h4 {
     position: absolute;
     top: 2%;
     left: 2%;
-    height: 20%;
-    width: 20%;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.team-border {
     border-style: solid;
     border-color: #fff;
+    border-radius: 3px;
 }
 
 .team-logo-Dsize {
     height: 100%;
     width: auto;
+    padding: 2px;
 }
 
 .vikinsize {
@@ -155,7 +162,7 @@ h4 {
 
 #info-top {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -164,23 +171,41 @@ h4 {
 }
 
 .it-logo {
-    height: 35%;
-    width: auto;
+    width: 35%;
+    height: auto;
 }
 
 #cross-img {
     height: 10%;
     width: auto;
+    align-self: center;
+}
+
+#junction {
+    height: 10vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2vh;
 }
 
 #down-arrow {
-    height: 10%;
+    height: 100%;
     width: auto;
+}
+
+#info-mid {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../medias/Pattern_SA.jpg');
 }
 
 .no-show {
     display: none !important;
 }
+
+
 
 @media screen and (orientation: portrait) {
   #home-flex {
@@ -200,6 +225,10 @@ h4 {
   #info-top {
     flex-direction: column;
   }
+  .it-logo {
+    height: 35%;
+    width: auto;
+}
 }
 
 
