--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     box-sizing: border-box;
 }
 
