--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,14 @@ body {
 .pf-d-bureau-title {
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
+}
+.pf-d-tip {
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
 }
 
 .lato-regular {
@@ -47,6 +53,12 @@ body {
 .lato-bold {
   font-family: "Lato", sans-serif;
   font-weight: 700;
+  font-style: normal;
+}
+
+.chokokutai-regular {
+  font-family: "Chokokutai", system-ui;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -79,6 +91,7 @@ h4 {
     width: 35%;
     height: 100%;
     position: relative;
+    background-color: var(--red-insa);
 }
 
 #bureau-header {
@@ -86,6 +99,7 @@ h4 {
     height: 8vh;
     align-items: center;
     justify-content: center;
+    background-color: #fff;
 }
 
 #bureau-header img {
@@ -119,6 +133,7 @@ h4 {
     font-size: 1.6rem;
     cursor: pointer;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    background-color: #fff;
 }
 .menu-item:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
@@ -187,9 +202,43 @@ h4 {
     padding: 5%;
 }
 
+#back-arrow, #back-arrow-4 {
+    width: 8vw;
+    height: auto;
+    position: fixed;
+    top: 2%;
+    left: 2%;
+}
+
+/* #back-arrow:hover {
+    cursor: pointer;
+} */
+
+#ba-tip {
+    position: fixed;
+    left: 10%;
+    top: 2%;
+    height: 8vw;
+    width: 8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#tip-text {
+    max-height: 100%;
+    max-width: 100%;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
 .it-logo {
     width: 35%;
     height: auto;
+}
+
+#it-amicale {
+    aspect-ratio: 1.0;
 }
 
 #cross-img {
@@ -211,7 +260,7 @@ h4 {
     width: auto;
 }
 
-#info-mid {
+#info-mid, #info-mid-4 {
     display: flex;
     height: 100vh;
     width: 100vw;
@@ -241,7 +290,17 @@ h4 {
   .it-logo {
     height: 35%;
     width: auto;
-}
+  }
+  #back-arrow, #back-arrow-4{
+    height: 8vh;
+    width: auto;
+  }
+  #ba-tip {
+    top: 8%;
+    left: 2%;
+    height: 8vh;
+    width: 8vh;
+  }
 }
 
 
