--- a/css/styles.css
+++ b/css/styles.css
@@ -157,11 +157,21 @@ h4 {
 }
 
 
-#fs-img {
+
+.fs #scene-container {
+height: 100%;
+}
+
+#full-screen {
+    display: none;
     position: absolute;
     bottom: 2%;
     right: 2%;
-    display: none;
+}
+
+#fs-img {
+    height: 5vh;
+    width: auto;
 }
 
 #team {
@@ -208,27 +218,25 @@ h4 {
     position: fixed;
     top: 2%;
     left: 2%;
+    z-index: 1;
 }
-
-/* #back-arrow:hover {
-    cursor: pointer;
-} */
 
 #ba-tip {
     position: fixed;
-    left: 10%;
+    left: 9%;
     top: 2%;
     height: 8vw;
     width: 8vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 #tip-text {
     max-height: 100%;
     max-width: 100%;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
 }
 
@@ -262,14 +270,58 @@ h4 {
 
 #info-mid, #info-mid-4 {
     display: flex;
-    height: 100vh;
-    width: 100vw;
-    background-image: url('../medias/Pattern_SA.jpg');
+    background-size: cover;
+    background-repeat: repeat;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
+#info-mid { background-image: url('../medias/Pattern_SA.jpg'); }
+#info-mid-4 { background-image: url('../medias/Pattern_prev.jpg'); }
 
+#corpus-title {
+    margin-top: 7vh;
+    margin-right: 7vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
+
+#title-content {
+    max-width: 70%;
+    font-size: 3.5rem;
+    text-align: right;
+    text-wrap: pretty;
+}
+
+#corpus {
+    margin: 6vh 20vw;
+}
+
+#corpus-content {
+    display: block;
+    font-size: 1.4rem;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+#plan-img-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    max-height: 60vh;
+}
+
+#planning-img {
+    scale: 0.35;
+}
 
 @media screen and (orientation: portrait) {
+  html.fs #bureau-container { display: none; }
+  html.fs #scene-container, #scene-container #canvas { height: 100vh; }
+
   #home-flex {
     flex-direction: column;
   }
@@ -281,7 +333,7 @@ h4 {
     height: 50%;
     width: 100%;
   }
-  #fs-img {
+  #full-screen {
     display: block;
   }
   #info-top {
@@ -300,6 +352,29 @@ h4 {
     left: 2%;
     height: 8vh;
     width: 8vh;
+  }
+  #tip-text {
+    font-size: 1rem;
+  }
+  #corpus-title {
+    margin-top: 5vh;
+    margin-right: 4vh;
+  }
+  #title-content {
+    font-size: 2rem;
+  }
+  #corpus {
+    margin: 6vh 13vw;
+  }
+  #corpus-content {
+    font-size: 1rem;
+  }
+  #plan-img-container {
+    max-height: none;
+    align-items: start;
+  }
+  #planning-img {
+    transform: rotate(90deg);
   }
 }
 
