--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ h4 {
     justify-content: center;
     height: 15%;
     width: 85%;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     cursor: pointer;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     background-color: #fff;
@@ -243,6 +243,7 @@ height: 100%;
 .it-logo {
     width: 35%;
     height: auto;
+    margin: auto;
 }
 
 #it-amicale {
@@ -326,12 +327,15 @@ height: 100%;
     flex-direction: column;
   }
   #bureau-container {
-    height: 50%;
+    height: 50vh;
     width: 100%;
   }
   #scene-container {
-    height: 50%;
+    height: 50vh;
     width: 100%;
+  }
+  .menu-item {
+    font-size: 1.1rem;
   }
   #full-screen {
     display: block;
