--- a/css/styles.css
+++ b/css/styles.css
@@ -357,6 +357,23 @@ h4 {
     text-justify: inter-word;
 }
 
+#blouse-img-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.blouse-img {
+  max-width: 70%;
+  aspect-ratio: 1.0;
+  height: auto;
+}
+
+#spec-img {
+  margin-bottom: 2vh;
+}
+
 #plan-img-container {
     display: flex;
     flex-direction: row;
