--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body {
 }
 
 .lato-regular {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", sans-serifs;
   font-weight: 400;
   font-style: normal;
 }
@@ -314,7 +314,21 @@ h4 {
 #down-arrow {
     height: 100%;
     width: auto;
+    position: relative;
+    top: 0vh;
 }
+
+.animate-down-arrow {
+  animation: bounceAnim 0.5s ease-in-out 2;
+}
+
+@keyframes bounceAnim {
+  0%   { top: 0px; }
+  50%  { top: -4vh; }
+  100% { top: 0px; }
+}
+
+
 
 #info-mid, #info-mid-2, #info-mid-3 #info-mid-4 {
     display: flex;
