--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,42 @@ h4 {
   box-sizing: inherit;
 }
 
+#popup {
+    width: calc(min(500px, 100vw - 2rem));
+    z-index: 20;
+    position: fixed;
+    background-color: blue;
+    color: white;
+    border-radius: 30px;
+    padding: 1rem;
+    text-align: center;
+    margin: 1rem;
+}
+
+#backdrop {
+    position: fixed;
+    z-index: 5;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    /* display: block; */
+    background: rgba(0, 0, 0, 0, 0.5);
+    display: none;
+}
+
+#backdrop:not(.no-show) {
+    display: block;
+}
+
+div.blur {
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+}
+
+
 #home-flex {
     display: flex;
     align-content: flex-start;
