--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,11 @@ html:not(.loading) #splash { display: none; }
 
 body {
     margin: 0;
-    padding: 0;
+    /* padding: 0; */
+    padding: env(safe-area-inset-top, 16px) 
+         env(safe-area-inset-right, 16px) 
+         env(safe-area-inset-bottom, 16px) 
+         env(safe-area-inset-left, 16px);
     width: 100%;
     height: 100%;
     overflow: hidden;
