popup text and style

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ html.inka #info-mid-2 { background-image: url('../medias/pattern_sa.jpg'); }
 html.loading #home-flex { display: none; }
 html.loading #info { display: none; }
 html:not(.loading) #splash { display: none; }
+html.loading #full-screen { display: none; }
 /* html:not(.ss-equipe) #team-logo { display: none; } */
 
 body {
@@ -107,6 +108,9 @@ h4 {
     padding: 1rem;
     text-align: center;
     margin: 1rem;
+    border-style: solid;
+    border-color: #fff;
+    border-width: 2px;
 }
 
 #backdrop {
