--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,9 @@ div.blur {
   html.ss-equipe #bureau-container { height: 35% }
 
   #popup {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    overflow-y: scroll;
+    max-height: 80vh;
   }
   #home-flex {
     flex-direction: column;
