planning image size

--- a/css/styles.css
+++ b/css/styles.css
@@ -466,7 +466,9 @@ div.blur {
 }
 
 #planning-img {
-    scale: 0.15;
+    /* scale: 0.15; */
+    max-width: 90dvw;
+    max-height: 90dvh;
 }
 
 #bottom {
