--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,8 @@ body {
          env(safe-area-inset-right, 16px) 
          env(safe-area-inset-bottom, 16px) 
          env(safe-area-inset-left, 16px);
-    width: 100%;
-    height: 0px;
+    width: 100dvw;
+    height: 100dvh;
     overflow: hidden;
     box-sizing: border-box;
 }
